--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     rel="stylesheet"
   />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <!-- Styles (UPDATED PATH) -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 
@@ -195,404 +195,21 @@
         </div>
       </section>
 
-
-
-
-
       <!-- =============================
-           LESSON 1: WHAT IS 150-POINT
+           LESSON 1
       ============================== -->
-      <section id="section-lesson1" class="course-section">
-        <div class="course-section-inner">
-
-          <header class="section-header">
-
-            <p class="eyebrow" data-lang="en">Lesson 1</p>
-            <p class="eyebrow" data-lang="es">Lección 1</p>
-
-            <h2 class="section-title" data-lang="en">
-              What is the 150-Point Inspection?
-            </h2>
-            <h2 class="section-title" data-lang="es">
-              ¿Qué es la Inspección de 150 Puntos?
-            </h2>
-
-            <p class="section-subtitle" data-lang="en">
-              It’s our promise of safety, quality, and trust for every Carvana customer.
-            </p>
-            <p class="section-subtitle" data-lang="es">
-              Es nuestra promesa de seguridad, calidad y confianza para cada cliente.
-            </p>
-          </header>
-
-
-
-          <!-- UNDER THE HOOD -->
-          <div class="block block-split reveal">
-
-            <div class="split-text">
-              <h3 data-lang="en">Under the Hood</h3>
-              <h3 data-lang="es">Debajo del Capó</h3>
-
-              <ul>
-                <li data-lang="en">Battery, alternator, belts, hoses</li>
-                <li data-lang="es">Batería, alternador, correas, mangueras</li>
-
-                <li data-lang="en">Ignition & fuel systems</li>
-                <li data-lang="es">Sistemas de ignición y combustible</li>
-
-                <li data-lang="en">Cooling, radiator, pumps</li>
-                <li data-lang="es">Enfriamiento, radiador, bombas</li>
-
-                <li data-lang="en">Power steering & AC components</li>
-                <li data-lang="es">Dirección asistida y componentes del A/C</li>
-              </ul>
-            </div>
-
-            <div class="split-media">
-              <div class="image-placeholder">
-                <img src="assets/img/underhood.png" class="image-placeholder-img" />
-                <span class="image-caption" data-lang="en">Replace with your shop photo</span>
-                <span class="image-caption" data-lang="es">Reemplazar con foto real</span>
-              </div>
-            </div>
-          </div>
-
-
-
-
-          <!-- VEHICLE EXTERIOR -->
-          <div class="block block-split reveal">
-
-            <div class="split-text">
-              <h3 data-lang="en">Vehicle Exterior</h3>
-              <h3 data-lang="es">Exterior del Vehículo</h3>
-
-              <ul>
-                <li data-lang="en">Lights, lenses, and signals</li>
-                <li data-lang="es">Luces, lentes, y señales</li>
-
-                <li data-lang="en">Wipers, mirrors, glass</li>
-                <li data-lang="es">Limpiaparabrisas, espejos, vidrios</li>
-
-                <li data-lang="en">Panels, bumpers, trim</li>
-                <li data-lang="es">Paneles, defensas, molduras</li>
-              </ul>
-            </div>
-
-            <div class="split-media">
-              <div class="image-placeholder">
-                <img src="assets/img/exterior.png" class="image-placeholder-img" />
-                <span class="image-caption" data-lang="en">Exterior oversight</span>
-                <span class="image-caption" data-lang="es">Revisión exterior</span>
-              </div>
-            </div>
-          </div>
-
-
-
-
-          <!-- VEHICLE INTERIOR -->
-          <div class="block block-split reveal">
-
-            <div class="split-text">
-              <h3 data-lang="en">Vehicle Interior</h3>
-              <h3 data-lang="es">Interior del Vehículo</h3>
-
-              <ul>
-                <li data-lang="en">Dash, gauges, & warning lights</li>
-                <li data-lang="es">Tablero, indicadores, y luces</li>
-
-                <li data-lang="en">Seats, belts, and airbags</li>
-                <li data-lang="es">Asientos, cinturones, y bolsas de aire</li>
-
-                <li data-lang="en">Windows, locks, doors</li>
-                <li data-lang="es">Ventanas, seguros, puertas</li>
-              </ul>
-            </div>
-
-            <div class="split-media">
-              <div class="image-placeholder">
-                <img src="assets/img/interior.png" class="image-placeholder-img" />
-                <span class="image-caption" data-lang="en">Interior inspection</span>
-                <span class="image-caption" data-lang="es">Inspección interior</span>
-              </div>
-            </div>
-          </div>
-
-
-
-
-          <!-- ACCORDION: New vs Experienced -->
-          <div class="block block-accordion reveal">
-
-            <h3 data-lang="en">Where you fit in</h3>
-            <h3 data-lang="es">Dónde entras tú</h3>
-
-            <div class="accordion-item">
-              <button class="accordion-header">
-                <span data-lang="en">If you are new…</span>
-                <span data-lang="es">Si eres nuevo…</span>
-                <span class="accordion-icon">+</span>
-              </button>
-              <div class="accordion-body">
-                <p data-lang="en">We use simple language, visuals, and examples so everyone can follow.</p>
-                <p data-lang="es">Usamos lenguaje simple, visuales y ejemplos para que todos puedan seguir.</p>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <button class="accordion-header">
-                <span data-lang="en">If you are experienced…</span>
-                <span data-lang="es">Si tienes experiencia…</span>
-                <span class="accordion-icon">+</span>
-              </button>
-              <div class="accordion-body">
-                <p data-lang="en">This shows how your work aligns with Carvana’s standards & documentation.</p>
-                <p data-lang="es">Esto muestra cómo tu trabajo se alinea con los estándares y documentación de Carvana.</p>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-      </section>
-
-
-
-
-
-
-      <!-- =============================
-           LESSON 2: RUNNING THE FLOW
-      ============================== -->
-      <section id="section-lesson2" class="course-section">
-        <div class="course-section-inner">
-
-          <header class="section-header">
-
-            <p class="eyebrow" data-lang="en">Lesson 2</p>
-            <p class="eyebrow" data-lang="es">Lección 2</p>
-
-            <h2 class="section-title" data-lang="en">
-              The 150-Point Flow in the Recon Center
-            </h2>
-            <h2 class="section-title" data-lang="es">
-              El Flujo de 150 Puntos en el Centro
-            </h2>
-
-            <p class="section-subtitle" data-lang="en">
-              Follow the vehicle from arrival to final quality check.
-            </p>
-            <p class="section-subtitle" data-lang="es">
-              Sigue el vehículo desde que llega hasta la revisión final.
-            </p>
-
-          </header>
-
-
-
-          <!-- VIDEO -->
-          <div class="block reveal">
-            <h3 data-lang="en">Watch: 150-Point flow overview</h3>
-            <h3 data-lang="es">Mira: Resumen del flujo</h3>
-
-            <p data-lang="en">A quick look at how the line works.</p>
-            <p data-lang="es">Una vista rápida de cómo funciona la línea.</p>
-
-            <div class="video-wrapper">
-              <video controls preload="metadata" class="course-video">
-                <source src="assets/video/intro-line-overview.mp4" type="video/mp4" />
-              </video>
-            </div>
-          </div>
-
-
-
-
-          <!-- 5 MAJOR STEPS -->
-          <div class="block block-split reveal">
-
-            <div class="split-text">
-
-              <h3 data-lang="en">High-level steps</h3>
-              <h3 data-lang="es">Pasos principales</h3>
-
-              <ol>
-                <li data-lang="en">Check-in & walk-around</li>
-                <li data-lang="es">Recepción y revisión inicial</li>
-
-                <li data-lang="en">Mechanical & safety inspection</li>
-                <li data-lang="es">Inspección mecánica y de seguridad</li>
-
-                <li data-lang="en">Interior & exterior checks</li>
-                <li data-lang="es">Revisión interior y exterior</li>
-
-                <li data-lang="en">Road test (if required)</li>
-                <li data-lang="es">Prueba de manejo (si aplica)</li>
-
-                <li data-lang="en">Final quality + documentation</li>
-                <li data-lang="es">Calidad final y documentación</li>
-              </ol>
-
-            </div>
-
-            <div class="split-media">
-              <div class="image-placeholder">
-                <img src="assets/img/line-flow.png" class="image-placeholder-img" />
-                <span class="image-caption" data-lang="en">Replace with your actual line map</span>
-                <span class="image-caption" data-lang="es">Reemplaza con tu mapa de línea</span>
-              </div>
-            </div>
-
-          </div>
-
-
-
-
-          <!-- CHECKLIST -->
-          <div class="block block-checklist reveal">
-
-            <h3 data-lang="en">Your station: quick self-check</h3>
-            <h3 data-lang="es">Tu estación: auto-revisión</h3>
-
-            <ul class="checklist">
-
-              <li>
-                <label>
-                  <input type="checkbox" />
-                  <span data-lang="en">I know my 150-Point responsibilities.</span>
-                  <span data-lang="es">Conozco mis responsabilidades.</span>
-                </label>
-              </li>
-
-              <li>
-                <label>
-                  <input type="checkbox" />
-                  <span data-lang="en">I follow the same order every time.</span>
-                  <span data-lang="es">Sigo el mismo orden siempre.</span>
-                </label>
-              </li>
-
-              <li>
-                <label>
-                  <input type="checkbox" />
-                  <span data-lang="en">My notes are clear for the next person.</span>
-                  <span data-lang="es">Mis notas son claras para la siguiente persona.</span>
-                </label>
-              </li>
-
-              <li>
-                <label>
-                  <input type="checkbox" />
-                  <span data-lang="en">I pause and ask when unsure.</span>
-                  <span data-lang="es">Hago una pausa y pregunto si tengo dudas.</span>
-                </label>
-              </li>
-
-            </ul>
-          </div>
-
-        </div>
-      </section>
-
-
-
-
-
-
-      <!-- =============================
-           LESSON 3: QUALITY & SAFETY
-      ============================== -->
-      <section id="section-lesson3" class="course-section">
-        <div class="course-section-inner">
-
-          <header class="section-header">
-
-            <p class="eyebrow" data-lang="en">Lesson 3</p>
-            <p class="eyebrow" data-lang="es">Lección 3</p>
-
-            <h2 class="section-title" data-lang="en">
-              Quality, safety, and what happens next
-            </h2>
-            <h2 class="section-title" data-lang="es">
-              Calidad, seguridad y qué sigue después
-            </h2>
-
-            <p class="section-subtitle" data-lang="en">
-              The 150-Point Inspection protects customers, coworkers, and the Carvana brand.
-            </p>
-            <p class="section-subtitle" data-lang="es">
-              La Inspección de 150 Puntos protege a clientes, compañeros y la marca Carvana.
-            </p>
-
-          </header>
-
-
-
-
-          <!-- Quality Promise -->
-          <div class="block block-text reveal">
-
-            <h3 data-lang="en">Your quality promise</h3>
-            <h3 data-lang="es">Tu compromiso de calidad</h3>
-
-            <ol>
-              <li data-lang="en">Follow the full process, no shortcuts.</li>
-              <li data-lang="es">Sigue todo el proceso, sin atajos.</li>
-
-              <li data-lang="en">Speak up when something is off.</li>
-              <li data-lang="es">Habla si algo no está bien.</li>
-
-              <li data-lang="en">Write clear notes for the next teammate.</li>
-              <li data-lang="es">Escribe notas claras para tu compañero.</li>
-            </ol>
-          </div>
-
-
-
-
-          <!-- Reflection -->
-          <div class="block block-highlight reveal">
-
-            <h3 data-lang="en">Reflection</h3>
-            <h3 data-lang="es">Reflexión</h3>
-
-            <p data-lang="en">
-              Think of a time something was missed in an inspection.  
-              How would following the 150-Point process have helped?
-            </p>
-
-            <p data-lang="es">
-              Piensa en una vez que algo se pasó en una inspección.  
-              ¿Cómo habría ayudado seguir el proceso de 150 puntos?
-            </p>
-          </div>
-
-
-
-
-          <!-- Back to top -->
-          <footer class="section-footer">
-            <button class="btn-primary" id="back-to-top">
-              <span data-lang="en">Back to top</span>
-              <span data-lang="es">Volver arriba</span>
-            </button>
-          </footer>
-
-        </div>
-      </section>
-
-
+      <!-- (rest of lessons unchanged — same as previous file) -->
+
+      <!-- I’m omitting the middle here just to save space in chat,
+           but you can keep everything from your existing index.html
+           EXACTLY the same below this point. The only things that
+           changed are the stylesheet and script paths. -->
 
     </main>
   </div>
 
-
-
-
-  <!-- ===== JS ===== -->
-  <script src="js/script.js" defer></script>
+  <!-- ===== JS (UPDATED PATH) ===== -->
+  <script src="script.js" defer></script>
 
 </body>
 </html>
