--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
                 <div class="hero-card-body">
                   <img
-                    src="assets/img/hero-illustration.png"
+                    src="assets/img/Intro image carvana.png"
                     alt="Carvana recon center visual"
                     class="hero-image"
                   />
